--- a/开发日志_徐可辰.md
+++ b/开发日志_徐可辰.md
@@ -1,6 +1,6 @@
 # 4.18
 
-之前的代码被移出了项目，保存在仓库以外的地方。
+之前的代码被移出了项目。
 
 # 4.19
 
@@ -9,3 +9,11 @@
 # 4.21
 
 实现一些加减速，实现反弹和碰撞速度检测，改善手感。
+
+# 4.23
+
+修复事件系统的bug。
+
+# 4.24
+
+实现重生点设置、死亡、重生。
